--- a/.gitignore
+++ b/.gitignore
@@ -81,4 +81,5 @@ DerivedDataCache/*
 DerivedDataCache/
 
 InfinityBladeGrassLands/
+InfinityBladeWarriors/
 ArenaBattle/Content/Book/StaticMesh/SM_SQUARE.uasset
