--- a/.gitignore
+++ b/.gitignore
@@ -82,4 +82,5 @@ DerivedDataCache/
 
 InfinityBladeGrassLands/
 InfinityBladeWarriors/
+InfinityBladeWeapons/
 ArenaBattle/Content/Book/StaticMesh/SM_SQUARE.uasset
